# wp-tui

./: .gitignore  README.md  pyproject.toml
docs/: RELEASING.md
docs/brainstorms/: 2026-07-14-pipe-markdown-create-post-requirements.md
docs/plans/: 2026-07-11-001-feat-editorial-experience-and-image-upload-plan.md  2026-07-12-001-feat-media-library-picker-plan.md  2026-07-13-001-feat-package-manager-distribution-plan.md  2026-07-14-001-feat-pipe-markdown-create-post-plan.md  2026-07-18-001-feat-slash-block-switcher-plan.md  2026-07-18-002-feat-list-item-editing-plan.md  2026-07-18-003-feat-heading-level-selection-plan.md  2026-07-18-004-feat-list-nesting-plan.md  2026-07-18-005-feat-table-cell-editing-plan.md  2026-07-19-001-feat-undo-redo-plan.md  2026-07-19-002-feat-conflict-resolution-ux-plan.md
tests/: conftest.py  test_autosave.py  test_block_switcher_modal.py  test_block_switcher_registry.py  test_canvas_convert.py  test_cli.py  test_client_editorial.py  test_config.py  test_conflict_modal.py  test_conflict_resolution.py  test_containers.py  test_create_flow.py  test_editor_flow.py  test_factory.py  test_heading_level.py  test_history.py  test_image_block.py  test_image_upload.py  test_inline.py  test_inline_editor.py  test_inline_property.py  test_list_edit.py  test_list_nesting.py  test_list_nesting_render.py  test_markdown_import.py  test_media_picker.py  test_nested_blocks.py  test_nested_enter_backspace.py  test_paths.py  test_phase5_editor.py  test_pipe_import.py  test_post_settings.py  test_review_fixes.py  test_roundtrip.py  test_roundtrip_property.py  test_slash_trigger.py  test_smoke_app.py  test_stdin_import.py  test_structural.py  test_table_edit_e2e.py  (+6 more)
tests/fixtures/: kitchen_sink.html  voids_and_edges.html
wptui/: __init__.py  __main__.py  app.py  app.tcss  autosave.py  config.py  history.py  paths.py  stdin_import.py
wptui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wptui/api/: __init__.py  client.py  dto.py  errors.py
wptui/blocks/: __init__.py  containers.py  factory.py  grammar.py  image.py  markdown_import.py  model.py  serialize.py  switcher.py  table.py  text.py
wptui/inline/: __init__.py  html_parse.py  html_serialize.py  markup.py  model.py
wptui/keys/: __init__.py  modes.py  vim.py
wptui/screens/: connect.py  editor.py  post_list.py  post_settings.py
wptui/widgets/: __init__.py  block_switcher.py  canvas.py  confirm.py  conflict_modal.py  heading_level.py  image_card.py  image_upload.py  inline_area.py  media_picker.py  opaque_card.py  separator_card.py  table_editor.py  term_picker.py  text_block.py
