[project]
name = "wptui"
version = "0.1.0"
description = "A terminal UI for editing WordPress posts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.7",
    "hypothesis>=6.0",
]

[project.scripts]
wptui = "wptui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wptui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
