[project]
name = "wptui"
version = "0.1.1"
description = "A terminal UI for editing WordPress posts"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Greg Boone" }]
keywords = ["wordpress", "tui", "terminal", "textual", "cli", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    # Capped: InlineMarkdownArea overrides TextArea internals (_build_highlight_map,
    # _highlights, _line_cache, _replace_via_keyboard) that can change across majors.
    "textual>=8.0,<9",
    "httpx>=0.27",
    "keyring>=25.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.7",
    "hypothesis>=6.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/gboone/wp-tui"
Repository = "https://github.com/gboone/wp-tui"
Issues = "https://github.com/gboone/wp-tui/issues"

[project.scripts]
wptui = "wptui.__main__:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wptui*"]

[tool.setuptools.package-data]
# app.tcss is loaded at runtime via App.CSS_PATH; without this it is left out of
# the wheel (setuptools packages only .py by default) and `wptui` crashes on launch.
wptui = ["*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
